Fix missing annotation and simplify list collector